Showcase: PrimeIconsView - remove deprecated API-usage